Updrading the poject to JDK 21